--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "commitmsg": "validate-commit-msg",
     "preversion": "npm run build",
-    "open:src": "babel-node tools/srcServer.js",
+    "open:src": "node tools/srcServer.js",
     "dev": "npm-run-all --parallel open:src test:watch",
     "clean": "rm -rf ./dist && mkdir dist",
     "prebuild": "npm run clean && npm run test",
@@ -37,17 +37,12 @@
   "devDependencies": {
     "autoprefixer": "~6.4.0",
     "awesome-typescript-loader": "~3.1.3",
-    "babel-cli": "~6.24.1",
-    "babel-loader": "~6.2.5",
-    "babel-preset-es2015": "~6.18.0",
-    "babel-preset-stage-1": "~6.13.0",
     "browser-sync": "~2.18.12",
     "condition-circle": "~1.5.0",
     "copy-webpack-plugin": "~3.0.1",
     "core-js-webpack-plugin": "~1.0.3",
     "css-loader": "~0.24.0",
     "ejs-compiled-loader": "~1.1.0",
-    "es6-promise": "~3.1.2",
     "extract-text-webpack-plugin": "~1.0.1",
     "file-loader": "~0.9.0",
     "html-webpack-plugin": "~2.22.0",
